--- a/public/public2/index1.html
+++ b/public/public2/index1.html
@@ -182,7 +182,7 @@
             <div class="">
                 <div class="client scrollimation fade-up d4">
                     <a href="http://demos.q-themes.net/qubico/#link" target="_blank">
-                        <img class="img-responsive img-center" src="./css/logos/omg-logo.png" alt="">
+                        <img class="img-responsive img-center" src="./css/logos/omg-logo1.png" alt="">
                     </a>
                 </div>
             </div>
